# Emu68

./: .gitignore  .gitmodules  A64.h  ARM.h  CMakeLists.txt  CODING_STYLE.md  CREDIT.Icon  DuffCopy.h  EmuLogo.c  Features.h  HunkLoader.c  HunkLoader.h  M68k.h  M68k_EA.c  M68k_FPU.c  M68k_LINE0.c  M68k_LINE4.c  M68k_LINE5.c  M68k_LINE6.c  M68k_LINE8.c  M68k_LINE9.c  M68k_LINEB.c  M68k_LINEC.c  M68k_LINED.c  M68k_LINEE.c  M68k_LINEF.c  M68k_MOVE.c  M68k_MULDIV.c  M68k_SR.c  M68k_Translator.c  M68k_opcodes.md  Makefile  README.md  RegisterAllocator.c  RegisterAllocator.h  RegisterAllocator64.c  config.h  cpp_support.cpp  devicetree.c  devicetree.h  (+17 more)
.github/: FUNDING.yml
.github/workflows/: cmake.yml  nightly.yml
AArch64/: mmu.c  start.c
Documentation/: RegisterAllocator.md
Examples/: Makefile
Examples/Buddha/: buddha.c  startup.c
Examples/Dhrystone2.1/: Makefile  dhry.h  dhry_1.c
Examples/Linpack/: support.h
Examples/SmallPT/: Makefile  smallpt.cc  smallpt.cpp  startup.c  support.cpp  support.h
Examples/SysInfo/: Makefile  sysinfo.c  test-dhrystone.s
Include/: A64.h  ARM.h  EmuLogo.h  HunkLoader.h  M68k.h  RegisterAllocator.h  config.h  support.h  tlsf.h
PBPro/: start_pbpro.c  support_pbpro.c
RasPi/: start_rpi64.c  support_rpi.c  support_rpi.h
blobs/: rk3399-pinebook-pro.dtb  rk3399-pinebookpro.dtb  rk3399-rockpro64-v2.dtb  rk3399-rockpro64.dtb
build-scripts/: README.md  build-aarch64  build-m68k-amigaos  build-with-docker
cmake/: devicetree.cmake  firmware_download.cmake  verstring.cmake
docker/: docker-compose.yml
docker/amigadev/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: Gemfile  Options.md  P96_Setup.md  SD_Preparation.md  _config.yml  index.md
docs/_posts/: 2021-12-30-welcome-to-jekyll.markdown
docs/internals/: ControlRegisters.md  MMU.md  PowerPCRegisterMapping.md  RegisterMapping.md  index.md
docs/tutorials/: P96_Setup.md  SD_Preparation.md  index.md
documentation/: overlays.md
examples/: Makefile
examples/Buddha/: Makefile  buddha.c  startup_ppc.c  support.c
examples/Dhrystone2.1/: Dhrystone  dhry.h  dhry_1.c  dhry_2.c
examples/Linpack/: Makefile  linpack.c  startup.c  support.c
examples/SmallPT/: Makefile  smallpt.cpp  startup.c  support.cpp
examples/SysInfo/: sysinfo  sysinfo.c  sysinfo.new  test-dhrystone.s  topaz.c
include/: A64.h  DuffCopy.h  ElfLoader.h  EmuFeatures.h  HunkLoader.h  M68k.h  PPC.h  RegLock.h  RegisterAllocator.h  TranslatorContext.hpp  boards.h  cache.h  config.h  devicetree.h  disasm.h  doorbell.h  intc.h  lists.h  md5.h  mmu.h  nodes.h  pistorm.h  spinlock.h  sponsoring.h  support.h  support_rpi.h  tlsf.h  version.h.in
include/cpp/: LRUCache.hpp  List.hpp  ReturnStack.hpp  lists  lists.hpp  nodes  nodes.hpp
include/emu68/: Allocators.h  Architectures.h  CodeGenerator.h  FPR  FPR.hpp  GPR  GPR.hpp  LRUCache  LRUCache.hpp  List  List.hpp  M68KState.h  Node  Node.hpp  RegisterAllocator.h  ReturnStack  ReturnStack.hpp  TranslatorContext  TranslatorContext.hpp
include/logo/: logo_emu68.h  logo_pistorm.h  logo_ppc.h
scripts/: analyse.py  config.txt  config_pistorm.txt  extlinux.conf  ldscript-be64.lds  ldscript-ppc.lds
src/: ElfLoader.c  EmuLogo.c  ExecutionLoop.c  HunkLoader.c  LRUCache.cpp  M68k_CC.c  M68k_EA.c  M68k_Exception.c  M68k_ExceptionEntry.c  M68k_FPU.c  M68k_FPU_concatrenated.c  M68k_FPU_rev3.c  M68k_FPUv1.c  M68k_LINE0.c  M68k_LINE4.c  M68k_LINE5.c  M68k_LINE6.c  M68k_LINE8.c  M68k_LINE9.c  M68k_LINEB.c  M68k_LINEC.c  M68k_LINED.c  M68k_LINEE.c  M68k_LINEF.c  M68k_MMU.c  M68k_MOVE.c  M68k_MULDIV.c  M68k_SR.c  M68k_Translator.c  PPC_Arithmetic.cpp  PPC_ExecutionLoop.cpp  PPC_FPU.cpp  PPC_LoadStore.cpp  PPC_SystemInstructions.cpp  PPC_Translator.c  PPC_Translator.cpp  PPC_TranslatorContext.cpp  ReturnStack.cpp  TranslatorContext.cpp  cache.c  (+8 more)
src/aarch64/: CodeGenerator_AArch64.h  RegisterAllocator64.c  intc.c  mmu.c  start.c  vectors.c
src/armhf/: start.c
src/attic/: EmuLogo.c  M68k_FPU.c
src/boards/: 68040.c  68040.h  68040.library.h  68040_library.h  brcm-emmc.device.h  brcm-emmc_device.h  brcm-sdhc.device.h  devicetree.c  devicetree.h  devicetree.resource.h  emmc.c  emmc.h  emu68rom.c  emu68rom.h  gic.resource.h  gic400.library.h  mailbox.resource.h  powerpc.library.h  sdcard.c  sdcard.h  unicam.c  unicam.h  unicam.resource.h  unicam_resource.h  z2ram.c
src/math/: 96bit.c  README.md  __cos.c  __rem_pio2.c  __rem_pio2_large.c  __sin.c  __tan.c  acos.c  asin.c  atan.c  atanh.c  cosh.c  exp.c  exp10.c  exp2.c  expm1.c  floor.c  libm.h  log.c  log10.c  log1p.c  log2.c  modf.c  pow.c  remquo.c  scalbn.c  sincos.c  sinh.c  tanh.c
src/overlays/: diagnostic.dts  emmc.dts  emu68.dts  noscsi.dts  ntsc.dts  pal.dts  sdhc.dts  unicam.dts  z2ram.dts
src/pine64/: start_pbpro.c  support_pbpro.c
src/pistorm/: cpld.c  efinix_firmware.h  efinix_firmware_ps16.h  efinix_firmware_ps32.h  ps16_protocol.c  ps32_protocol.c  ps_classic_protocol.c  ps_protocol.c  ps_protocol.h
src/ppc/: CMakeLists.txt  config.h  doorbell.h  init.c  kernel.c  kernel.h  ldscript-ppc.lds  libfunc.h  libstructs.h  patcher.c  powerpc.h  spinlock.h  support.c  support.h  version.h.in
src/ppc/attic/: constants.h  old_init.c  powerpc_lib.i  supportppc.c
src/ppc/doc/: exception.md
src/ppc/include/devices/: timer.h
src/ppc/include/exec/: libraries.h  lists.h  nodes.h  ports.h  semaphores.h  tasks.h  types.h
src/ppc/include/powerpc/: memoryPPC.h  portsPPC.h  powerpc.h  powerpc_protos.h  semaphoresPPC.h  tasksPPC.h  warpup_macros.h
src/ppc/include/utility/: tagitem.h
src/ppc/libfunc/: addheadppc.c  addtailppc.c  addtimeppc.c  causeinterrupt.c  changemmu.c  cmptimeppc.c  copymemppc.c  enqueueppc.c  findnameppc.c  findtagitemppc.c  gethalinfo.c  getinfo.c  gettagdatappc.c  insertppc.c  newlistppc.c  nexttagitemppc.c  remheadppc.c  removeppc.c  remtailppc.c  sprintf.c  subtimeppc.c  super.c  todo.md  user.c
src/raspi/: start_rpi.c  start_rpi64.c  support_rpi.c
src/virt/: start_virt.c  support_virt.c
toolchains/: aarch64-elf.cmake  aarch64-linux-gnu.cmake  arm-elf.cmake  ppc-linux-gnu.cmake
(+19 files in other folders)
